fixed some problems with pipeline